Hide overflow-x in html and body (bug fix for ipad)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,10 @@ body {
     }
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 p {
     line-height: 1.5556;
     margin-top: 1.5556em;
